--- a/manifest.json
+++ b/manifest.json
@@ -2,24 +2,21 @@
   "name": "Linkedin addon",
   "version": "0.1.0",
   "description": "This is a Linkedin addon, just for fun",
-  "permissions": ["storage", "tabs"],
+  "permissions": ["storage", "tabs", "scripting"],
   "host_permissions": ["https://*.linkedin.com/*"],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
       "matches": ["https://*.linkedin.com/*"],
-      "js": [
-        "./node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js",
-        "contentScript.js"
-      ],
-      "css": ["style.css"]
+      "js": ["contentScript.js"]
     }
   ],
   "action": {
     "default_title": "Linkedin addon",
-    "default_popup": "popup.html"
+    "default_popup": "index.html"
   },
   "manifest_version": 3
 }
