--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "1.0.0",
   "description": "This Chrome extension provides a set of functionalities to automate certain actions on LinkedIn. You can inject a new section with input fields and some buttons, and perform actions such as sending messages, creating new posts, saving text to localStorage, and refreshing the page.",
   "main": "contentScript.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.cjs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@webcomponents/webcomponentsjs": "^2.8.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-typescript": "^7.24.1",
+    "@types/chrome": "^0.0.266",
+    "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
+    "html-webpack-plugin": "^5.6.0",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
