--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "contentScript.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
     "build": "webpack --config webpack.config.cjs"
   },
   "author": "",
@@ -19,9 +20,13 @@
     "@types/chrome": "^0.0.266",
     "@types/jest": "^29.5.12",
     "babel-loader": "^9.1.3",
+    "babel-plugin-transform-builtin-classes": "^0.6.1",
     "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
